print works fine

--- a/C++/misc/t5/makefile
+++ b/C++/misc/t5/makefile
@@ -1,7 +1,7 @@
 CXXFLAGS = -g
 LDFLAGS = -lstdc++
 
-fme: parse.o fme.o
+test-fme: test-fme.o parse.o fme.o
 
 clean:
-	rm *.o fme
+	rm -f *.o test-fme
