several fixes for google mail which doesn't allow CMD filename extension

--- a/C++/misc/t5/makefile
+++ b/C++/misc/t5/makefile
@@ -4,7 +4,7 @@ LDFLAGS = -lstdc++
 test-fme: test-fme.o parse.o fme.o
 
 test: test-fme
-	./tests-compare.sh
+	./results-compare.sh
 
 clean:
 	rm -f *.o test-fme
